--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-server",
+  "name": "server-expressjs",
   "version": "1.0.0",
   "description": "Scaffolding para comenzar servidor de ExpressJS",
   "author": "Victor Giovanni Beltrán Rodríguez beltran-victor@outlook.com",
