--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "helmet": "^3.13.0",
     "http-errors": "^1.7.0",
