--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "main": "./src/server/bin/www",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./src/server/bin/www",
     "start:production": "set DEBUG=app:*& set NODE_ENV=production& node ./src/server/bin/www",
     "start:development": "set DEBUG=app:*& set NODE_ENV=development& nodemon ./src/server/bin/www",
     "start:test": "set DEBUG=app:*& set NODE_ENV=test& nodemon ./src/server/bin/www",
